[gd_scene load_steps=4 format=3 uid="uid://b8io3jmork557"]

[ext_resource type="Script" uid="uid://clcsiql3jk683" path="res://scripts/ui/SettingsPanel.gd" id="1_741xb"]
[ext_resource type="Theme" uid="uid://djqfj60k8kq6r" path="res://resources/TriassicTheme.tres" id="1_cjf3c"]
[ext_resource type="PackedScene" uid="uid://d00hba042nes7" path="res://scenes/ui/InfoPanel.tscn" id="3_idotu"]

[node name="SettingsPanel" type="Panel"]
custom_minimum_size = Vector2(500, 400)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cjf3c")
script = ExtResource("1_741xb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings"
horizontal_alignment = 1

[node name="MasterVolume" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"

[node name="SliderMaster" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.5
value = 1.0

[node name="MusicVolume" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="SliderMusic" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.5
value = 1.0

[node name="SFXVolume" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SliderSFX" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.5
value = 1.0

[node name="HowToPlayBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "How to Play"

[node name="TermsBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Terms & Conditions
"

[node name="TimeWarpBtn" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Time Warp (10 Fossils)"

[node name="BtnExtinction" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "TRIGGER EXTINCTION"

[node name="BtnLogout" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Log Out"

[node name="BtnClose" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Close"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Triassic-Evolution-v2.1.0"
horizontal_alignment = 1

[node name="InfoPanel" parent="." instance=ExtResource("3_idotu")]
visible = false
layout_mode = 1
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
